# Charify

./: .gitignore  CMakeLists.txt  README.md
charify/: CMakeLists.txt  image.hpp  kernel.hpp  main.cpp
charify/src/: image.cpp  kernel.cpp  main.cpp
